force-app/main/default/objects/LAD_Product_Bill_Of_Material__c/LAD_Product_Bill_Of_Material__c.object-meta.xml
<CustomObject>
    <description>FOUK-7848: Created for BOM records for Associated Products</description>
    <label>Product Bill Of Material</label>
    <nameField>
        <displayFormat>BOM-{00000}</displayFormat>
        <label>Product Bill Of Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Bill Of Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>