force-app/main/default/objects/LAD_Product_Bill_Of_Material__c/fields/LAD_Bill_of_Material_Id__c.field-meta.xml
<CustomField>
    <fullName>LAD_Bill_of_Material_Id__c</fullName>
    <description>FOUK-7848: Created for BOM records for Associated Products</description>
    <inlineHelpText>BOM Identifier Id</inlineHelpText>
    <label>Bill of Material Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>