force-app/main/default/objects/LAD_Product_Bill_Of_Material__c/fields/LAD_Product_Belron_Id__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_Belron_Id__c</fullName>
    <description>FOUK-7848: Created for BOM records for Associated Products</description>
    <inlineHelpText>The Latest OEM Code of the Product</inlineHelpText>
    <label>Product Belron Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>