force-app/main/default/objects/LAD_Product_Bill_Of_Material__c/fields/LAD_Product_Bill_of_Material_Quantity__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_Bill_of_Material_Quantity__c</fullName>
    <description>FOUK-7848: Created for BOM records for Associated Products</description>
    <inlineHelpText>Suggested Quantity for Associated Product</inlineHelpText>
    <label>Product Bill of Material Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>