force-app/main/default/objects/LAD_Product_Bill_Of_Material__c/fields/LAD_Product_BOM_Mandatory_Ind__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_BOM_Mandatory_Ind__c</fullName>
    <description>FOUK-7848: Created for BOM records for Associated Products</description>
    <inlineHelpText>Signifies if the Associated Product is essential or not</inlineHelpText>
    <label>Product BOM Mandatory Ind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FALSE</fullName>
                <default>true</default>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>TRUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>