force-app/main/default/objects/LAD_Product_Bill_Of_Material__c/fields/LAD_Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LAD_Product_Start_Date__c</fullName>
    <description>FOUK-7848: Created for BOM records for Associated Products</description>
    <inlineHelpText>Please follow format &apos;yyyy-mm-dd&apos; for entering date</inlineHelpText>
    <label>Product Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>